# Android_Audio_Workstation

./: .gitignore  CODE_QUALITY_AUDIT.md  README.md  VALIDATION.md  build.gradle  gradle.properties  local.properties  rebuild-native.sh  settings.gradle  tree.txt  validate-code.sh  validate-properties.py
.github/workflows/: android-ci.yml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/georgv/audioworkstation/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audioworkstation.cpp  native-lib.cpp
app/src/main/cpp/engine/: AudioEngine.cpp  AudioEngine.h  AudioSource.h  JNI_Bridge.cpp  LocalWavSource.cpp  LocalWavSource.h  OboeOutput.cpp  OboeOutput.h  OpenSLInput.cpp  OpenSLInput.h  OpenSLOutput.cpp  OpenSLOutput.h  RingBuffer.h
app/src/main/cpp/tests/: RingBuffer_test.cpp
app/src/main/java/: AppRoot.kt
app/src/main/java/com/georgv/audioworkstation/: MainActivity.kt  MainMenuAdapter.kt  MyApplication.kt  SongListAdapter.kt  TrackListAdapter.kt  UiListener.kt
app/src/main/java/com/georgv/audioworkstation/audio/controller/: AudioController.kt
app/src/main/java/com/georgv/audioworkstation/audioprocessing/: AudioController.kt  AudioProcessor.kt  AudioStreamingService.kt  Compressor.kt  Effect.kt  Equalizer.kt  Reverb.kt
app/src/main/java/com/georgv/audioworkstation/customHandlers/: AudioController.kt  CustomDataSource.kt  Permissions.kt  TypeConverter.kt  Utilities.kt  ViewAnimator.kt  WavHeader.kt
app/src/main/java/com/georgv/audioworkstation/data/: AudioData.kt  MenuItem.kt  RealmManager.kt  Song.kt  SongRepository.kt  SongRepositoryImpl.kt  Track.kt
app/src/main/java/com/georgv/audioworkstation/database/: Database.kt  SongDao.kt
app/src/main/java/com/georgv/audioworkstation/diagnostics/: RecordingLatencyTrace.kt
app/src/main/java/com/georgv/audioworkstation/engine/: AudioSessionManager.kt  NativeAudioManager.kt  NativeEngine.kt
app/src/main/java/com/georgv/audioworkstation/ui/: AppRoot.kt  MainActivity.kt  MainViewModel.kt  UiListener.kt
app/src/main/res/anim/: button_click.xml
app/src/main/res/drawable/: button_background.xml  ic_baseline_fiber_manual_record_24.xml  ic_baseline_keyboard_arrow_down_24.xml  ic_baseline_pause_24.xml  ic_baseline_pause_play_24.xml  ic_baseline_play_24.xml  ic_baseline_play_arrow_24.xml  ic_baseline_stop_24.xml  ic_icon_effects.xml  ic_plus_icon.xml  lgogoogogog.xml  logo_black.xml  logoo.xml  square_button.xml
app/src/main/res/layout/: fragment_audio_controls.xml  fragment_dialog_loading.xml  fragment_effect.xml  fragment_loud_speaker.xml  fragment_main_menu.xml  library_fragment.xml  main_activity.xml  main_fragment.xml  menu_item.xml  song_fragment.xml  song_holder_view.xml  track_holder_view.xml  track_list_fragment.xml  track_view.xml
app/src/main/res/navigation/: navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-night-v31/: themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/georgv/audioworkstation/: ExampleUnitTest.kt
docs/: DRAG_REORDER_READINESS.md
gradle/wrapper/: gradle-wrapper.properties
vpproject/: AudioWorkstation.vpp  AudioWorkstation.vpppath  AudioWorkstation.vpp~2  AudioWorkstation.vpp~3
(+157 files in other folders)
